Bug 708616 - Empty embedded file
Summary: Empty embedded file
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 10.05.1
Hardware: PC Linux
: P2 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-17 13:46 UTC by Julien Brunet
Modified: 2025-06-25 09:10 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
how to reproduce the case (14.99 KB, application/zip)
2025-06-17 13:46 UTC, Julien Brunet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Brunet 2025-06-17 13:46:51 UTC
Created attachment 26917 [details]
how to reproduce the case

Hello,

Back December 2024, I created this ticket(https://bugs.ghostscript.com/show_bug.cgi?id=708190) because we were experiencing an issue with the production of zugferd compliant .pdf files.

Now the 10.05.1 has been released we ran some new tests but unfortunately we are still having an issue : the xml file attached to the pdf is unknown.

I attache an example to reproduce the case.

Here is the command we are using : 
gs --permit-file-read=${PWD}/ -sDEVICE=pdfwrite -dPDFA=3 -sColorConversionStrategy=RGB -dPDFACompatibilityPolicy=1 -sZUGFeRDXMLFile=${PWD}/invoice.xml -sZUGFeRDProfile=${PWD}/rgb.icc -sZUGFeRDVersion=2p1 -sZUGFeRDConformanceLevel=BASIC -o ${PWD}/zugferd.pdf ${PWD}/zugferd.ps ${PWD}/original.pdf

Here is the zugferd.ps we are using : https://github.com/ArtifexSoftware/ghostpdl/blob/master/lib/zugferd.ps

Thank in advance for any help and have a good day !
Comment 1 Ken Sharp 2025-06-24 13:11:31 UTC
Fixed in commit 1e1ce28cc4cde3174b590febbd58401bb5e7c93c
Comment 2 Ken Sharp 2025-06-24 13:15:40 UTC
Sorry for the noise, wanted to recheck the test case.
Comment 3 Julien Brunet 2025-06-25 09:01:45 UTC
Hello, thank you for your response. Do you already know in which release this correction will be ?
Comment 4 Ken Sharp 2025-06-25 09:10:46 UTC
(In reply to Julien Brunet from comment #3)
> Hello, thank you for your response. Do you already know in which release
> this correction will be ?

The next one.